--- a/src/public/css/attendance_detail.css
+++ b/src/public/css/attendance_detail.css
@@ -12,7 +12,7 @@
     font-size: 30px;
     font-weight: bold;
     color: #000;
-    margin-bottom: 40px;
+    margin-bottom: 45px;
 }
 
 .attendance-title__line {
@@ -42,12 +42,16 @@
     line-height: 1;
     letter-spacing: 0.15em;
     text-align: left;
-    padding-left: 50px;
+    padding-left: 60px;
 }
 
 .table tr {
     border-bottom: 3px solid #E1E1E1;
-    height: 90px;
+    height: 85px;
+}
+
+.table tr:last-child {
+    border-bottom: none;
 }
 
 .table td {
@@ -64,15 +68,22 @@
 }
 
 .table td:nth-child(2) {
-    width: 20%;
+    width: 15%;
+    text-align: center;
 }
 
 .table td:nth-child(3){
-    width: 15%;
+    width: 10%;
+    text-align: center;
 }
 
 .table td:nth-child(4) {
-    width: 30%;
+    width: 15%;
+    text-align: center;
+}
+
+.table td:nth-child(5) {
+    width: 25%;
 }
 
 .year-cell input,
@@ -92,10 +103,9 @@
 
 .time-separator {
     text-align: center;
-    font-size: 18px;
+    vertical-align: middle;
+    font-size: 20px;
     font-weight: bold;
-    color: #000;
-    padding: 10px 0;
 }
 
 /* ===== time input のデザイン調整 ===== */
@@ -114,14 +124,41 @@ input[type="time"]::-ms-clear {
     display: none;
 }
 
+input[type="time"] {
+    width: 103px;
+    height: 29px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1;
+    letter-spacing: 0.15em;
+    padding: 3px;
+    /* 内側余白を追加 */
+    border: 1px solid #E1E1E1;
+    border-radius: 4px;
+    text-align: center;
+}
+
+/* 空のときに --:-- を透明化（Chrome/Edge/Safari） */
+input[type="time"][value=""]::-webkit-datetime-edit {
+    color: transparent;
+}
+
+/* フォーカス時は表示する（入力中は見えるように） */
+input[type="time"]:focus::-webkit-datetime-edit {
+    color: inherit;
+}
+
 .note-field {
-    width: 282px;
-    height: 65px;
+    width: 316px;
+    height: 72px;
     resize: none;
     /* ユーザーがサイズ変更できないようにする */
     padding: 8px;
+    margin: 15px;
     font-size: 14px;
     line-height: 1.4;
+    border: 1px solid #E1E1E1;
+    border-radius: 4px;
 }
 
 .btn {
